docs(readme): Update performance and correctness sections
Clarify benchmarks, allocation improvements, and test coverage
Expand correctness details and explain floating point validation